@@ -1,8 +1,12 @@
 <metal:cacheheaders define-macro="cacheheaders"
     tal:define="portal_state context/@@plone_portal_state;
-                lang context/Language|portal_state/default_language">
-    <metal:block tal:define="dummy python:request.RESPONSE.setHeader('Content-Type', 'text/html;;charset=utf-8')" />
-    <metal:block tal:define="dummy python:request.RESPONSE.setHeader('Content-Language', lang)" />
-    <metal:block tal:define="dummy python:request.RESPONSE.setHeader('Expires', 'Sat, 1 Jan 2000 00:00:00 GMT')" />
-    <metal:block tal:content="structure python:context.enableHTTPCompression(request=request, debug=0)" />
+                lang context/Language|portal_state/default_language;
+                setHeader python:request.RESPONSE.setHeader;">
+    <metal:block tal:define="dummy python:setHeader('Content-Type', 'text/html;;charset=utf-8')" />
+    <metal:block tal:define="dummy python:setHeader('Content-Language', lang)" />
+    <metal:block tal:define="dummy python:setHeader('Expires', 'Sat, 1 Jan 2000 00:00:00 GMT')" />
+    <tal:gzip tal:replace="nothing">
+      Use the following line to enable gzip compression
+      tal:content="structure python:context.enableHTTPCompression(request=request, enable=1)"
+    </tal:gzip>
 </metal:cacheheaders>
